--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,4 @@ org.gradle.parallel = true
 # Mod Properties
 version = 0.1.0
 maven_group = com.dm.earth
-archives_base_name = modid
+archives_base_name = heatwaves
